--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,35 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: 執行腳本
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo 'hello world!' > ./wwwroot/about.html
+      - name: 上傳成品檔
+        uses: actions/upload-artifact@v3
+        with:
+          name: wwwroot
+          path: ./wwwroot/
+
+  deploy:
+    runs-on: self-hosted
+    needs: build
+    steps:
+      - name: 下載成品檔
+        uses: actions/download-artifact@v2
+        with:
+          name: wwwroot
+      - name: 部屬至 IIS
+        run: |
+          Copy-Item . C:/inetpub/wwwroot/cicd-sample
