--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,9 +2,13 @@ name: CI
 
 on:
   push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    branches: 
+      - main
+    tags:
+      - v1.*
+  # pull_request:
+  #   branches: 
+  #     - main
 
   workflow_dispatch:
 
