--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,10 +2,10 @@ name: CI
 
 on:
   push:
-    branches: 
-      - main
     tags:
       - v1.*
+    # branches: 
+    #   - main
   # pull_request:
   #   branches: 
   #     - main
